--- a/eve-catalogue-gui/src/app/nfv-ns/nfv-ns.component.html
+++ b/eve-catalogue-gui/src/app/nfv-ns/nfv-ns.component.html
@@ -1,31 +1,66 @@
-<div>
-  <mat-card>
-    <mat-card-title><h1 class="mat-h1">Network Service Descriptors</h1></mat-card-title>
-    <div class="mat-elevation-z8">
-      <table mat-table class="full-width-table" matSort aria-label="Elements">
-        <!-- Id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-          <td mat-cell *matCellDef="let row">{{row.id}}</td>
-        </ng-container>
+<app-catalogue-sub-toolbar></app-catalogue-sub-toolbar>
+<mat-toolbar style="background: transparent;">
+  <span style="margin-left: 15px;"><h1 class="mat-h1">NS Descriptors</h1></span>
+</mat-toolbar>
+<div height="100%" style="background: transparent; padding: 30px;">
+  <table mat-table class="full-width-table" matSort aria-label="Elements" height="100%">
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let row"><b>{{row.nsdName}}</b></td>
+    </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-          <td mat-cell *matCellDef="let row">{{row.name}}</td>
-        </ng-container>
+    <!-- Version Column -->
+    <ng-container matColumnDef="version">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Version</th>
+      <td mat-cell *matCellDef="let row"><b>{{row.nsdVersion}}</b></td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+    <!-- Provider Column -->
+    <ng-container matColumnDef="provider">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Provider</th>
+      <td mat-cell *matCellDef="let row"><b>{{row.nsdDesigner}}</b></td>
+    </ng-container>
 
-      <mat-paginator #paginator
-          [length]="dataSource?.data.length"
-          [pageIndex]="0"
-          [pageSize]="50"
-          [pageSizeOptions]="[25, 50, 100, 250]">
-      </mat-paginator>
-    </div>
-  </mat-card>
+    <!-- Operational State Column -->
+    <ng-container matColumnDef="opstate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Operational State</th>
+      <td mat-cell *matCellDef="let row"><b>{{row.nsdOperationalState}}</b></td>
+    </ng-container>
+
+    <!-- Onboarding State Column -->
+    <ng-container matColumnDef="onstate">
+      <th mat-header-cell *matHeaderCellDef>Onboarding State</th>
+      <td mat-cell *matCellDef="let row"><b>{{row.nsdOnboardingState}}</b></td>
+    </ng-container>
+
+    <!-- Onboarding States Column -->
+    <ng-container matColumnDef="onstates">
+      <th mat-header-cell *matHeaderCellDef>MANO Onboarding State</th>
+      <td mat-cell *matCellDef="let row">
+        <tr *ngFor="let mano of row.manosOnboardingStatus | keyvalue" style="margin-left: 2%;">{{mano.key}} -> {{mano.value}}</tr>
+      </td>
+    </ng-container>
+
+    <!-- Button Column -->
+    <ng-container matColumnDef="buttons">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let row">
+        <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
+          <mat-button-toggle value="view_descriptor" (click)="viewNsDescriptor(row.id)"><mat-icon>remove_red_eye</mat-icon></mat-button-toggle>
+        </mat-button-toggle-group>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator #paginator
+      [length]="dataSource?.data.length"
+      [pageIndex]="0"
+      [pageSize]="50"
+      [pageSizeOptions]="[25, 50, 100, 250]"
+      style="background: transparent;">
+  </mat-paginator>
 </div>
-  
