--- a/eve-catalogue-gui/src/app/blueprints-ec-details/blueprints-ec-details.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-ec-details/blueprints-ec-details.component.html
@@ -27,7 +27,7 @@
 <mat-divider [vertical]="true"></mat-divider>
 <div style="float: left; width: 48%; margin: 1%">
     <div style="padding: 30px; margin-bottom: 10%;">
-        <app-blueprints-graph [elements]="ecbDetailsService.graphData" [layout]="layout" (select)="nodeChange($event)"></app-blueprints-graph>
+        <app-blueprints-graph [elements]="ecbDetailsService.graphData" (select)="nodeChange($event)"></app-blueprints-graph>
         <div style="padding-top: 30px;  "><p><p><b>Selected Node: </b>{{node_name}}</p></div>
     </div>
 </div>
