--- a/eve-catalogue-gui/src/app/blueprints-vs-details/blueprints-vs-details.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-vs-details/blueprints-vs-details.component.html
@@ -26,7 +26,7 @@
 <mat-divider [vertical]="true"></mat-divider>
 <div style="float: left; width: 48%; margin: 1%">
   <div style="background: transparent; padding:30px; padding-bottom: 10%;" >
-        <app-blueprints-graph [elements]="vsbDetailservice.graphData" [layout]="layout" (select)="nodeChange($event)"></app-blueprints-graph>
+        <app-blueprints-graph [elements]="vsbDetailservice.graphData" (select)="nodeChange($event)"></app-blueprints-graph>
         <div style="padding-top: 30px;"><p><b>Selected Node: </b>{{node_name}}</p></div>
     </div>
 </div>
