Added metricGraphType to experiment blueprint creation wizard

--- a/eve-catalogue-gui/src/app/blueprints-components/blueprints-e-stepper/blueprints-e-stepper.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-components/blueprints-e-stepper/blueprints-e-stepper.component.html
@@ -215,7 +215,17 @@
                                     </mat-select>
                                 </mat-form-field>
                             </td>
-                            <td></td>
+                            <td>
+                              <mat-form-field appearance="outline" color=primary class="data-full-width">
+                                  <mat-label>Graph Type</mat-label>
+                                  <mat-select formControlName="metricGraphType" name="graphType">
+                                      <mat-option *ngFor="let type of graphTypes" [value]="type">
+                                          {{type}}
+                                      </mat-option>
+                                  </mat-select>
+
+                                </mat-form-field>
+                              </td>
                         </tr>
                         <tr>
                             <td>
