--- a/eve-catalogue-gui/src/app/portal-home/portal-home.component.html
+++ b/eve-catalogue-gui/src/app/portal-home/portal-home.component.html
@@ -3,6 +3,7 @@
     <mat-menu #user_menu="matMenu">
         <button mat-menu-item (click)="logout();">Logout</button>
     </mat-menu>
+    <span><button mat-button routerLink="/tickets"><mat-icon>list</mat-icon> Tickets </button></span>
 </mat-toolbar>
 <table class="grid-table">
     <tr>
