TCB onboarding aligned with single-script IM

--- a/eve-catalogue-gui/src/app/blueprints-components/blueprints-tc/blueprints-tc.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-components/blueprints-tc/blueprints-tc.component.html
@@ -101,15 +101,9 @@
                                 <input matInput #nsFlavourId placeholder="Version" formControlName="version" required>
                             </mat-form-field>
                             <mat-form-field appearance="outline" color=primary class="rules-full-width">
-                              <input matInput #nsInstLevel placeholder="Configuration script" formControlName="configurationScript">
-                          </mat-form-field>
-                          <mat-form-field appearance="outline" color=primary class="rules-full-width">
-                                <input matInput #nsInstLevel placeholder="Execution script" formControlName="executionScript" required>
+                                <input matInput #nsInstLevel placeholder="Script" formControlName="script" required>
                             </mat-form-field>
-                            <mat-form-field appearance="outline" color=primary class="rules-full-width">
-                              <input matInput #nsInstLevel placeholder="Reset configuration script" formControlName="resetConfigScript">
-                          </mat-form-field>
-                      </td>
+                        </td>
                         <td></td>
                         <td></td>
                     </tr>
