--- a/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.html
+++ b/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.html
@@ -1,12 +1,7 @@
 <!-- Title Header-->
 <!--<app-content-header title="Tickets"></app-content-header>-->
 
-<mat-toolbar style="background-color: transparent;">
-    <span><button mat-button [matMenuTriggerFor]="user_menu"><mat-icon>person</mat-icon> {{username}} <mat-icon>keyboard_arrow_down</mat-icon></button></span>
-    <mat-menu #user_menu="matMenu">
-        <button mat-menu-item (click)="logout();">Logout</button>
-    </mat-menu>
-</mat-toolbar>
+<app-catalogue-sub-toolbar></app-catalogue-sub-toolbar>
 
 <div class="contentBlock">
     <!-- Action buttons -->
@@ -60,10 +55,7 @@
             <td mat-cell *matCellDef="let element"> 
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
                 <mat-button-toggle value="bold">
-                    <mat-icon aria-hidden="false" aria-label="Example edit icon">edit</mat-icon>
-                </mat-button-toggle>
-                <mat-button-toggle value="italic">
-                    <mat-icon aria-hidden="false" aria-label="Example folder icon">folder</mat-icon>
+                    <mat-icon aria-hidden="false" aria-label="Example edit icon">remove_red_eye</mat-icon>
                 </mat-button-toggle>
             </mat-button-toggle-group>
             </td>
@@ -80,8 +72,11 @@
         *ngIf="getTicketingStatus() == 'list'&&!fetching">
     </mat-paginator>
 
+    <mat-spinner *ngIf="fetching" class="my-spinner"></mat-spinner>
+
+
     <!-- New ticket form -->
-    <mat-card class="my-card" *ngIf="getTicketingStatus() == 'add'">
+    <mat-card class="my-card" *ngIf="getTicketingStatus() == 'add'&&!fetching">
 
         <mat-card-title>
             <div class="addTicket-card-header">
@@ -90,7 +85,7 @@
         </mat-card-title>
         <mat-divider></mat-divider>
         <mat-card-content>
-            <form class="my-form" [formGroup]="addTicketForm" (ngSubmit)="onSubmit()">
+            <form class="my-form" [formGroup]="addTicketForm">
 
                 <mat-form-field class="full-width">
                     <mat-select placeholder="Select a Product" name="product" [(value)]="product" formControlName="product" required (selectionChange)="getComponents(product)">
@@ -114,11 +109,6 @@
                     <textarea matInput formControlName="description" placeholder="Ticket details" name="description" required></textarea>
                 </mat-form-field>
                 
-                <mat-form-field class="full-width">
-                    <mat-select formControlName="assignedTo" placeholder="Select and admin user to assign the ticket" name="assignedTo" [(value)]="assignedTo" required>
-                    <mat-option *ngFor="let user of users" [value]="user" >{{ user }}</mat-option>
-                    </mat-select>
-                </mat-form-field>
                 <div class="newTicketButtonContainer">
                     <button mat-raised-button (click)="onSubmit()" color="primary" class="newTicketButton">Create</button>
                 </div>
