--- a/eve-catalogue-gui/src/app/blueprints-components/blueprints-vs-stepper/blueprints-vs-stepper.component.css
+++ b/eve-catalogue-gui/src/app/blueprints-components/blueprints-vs-stepper/blueprints-vs-stepper.component.css
@@ -28,3 +28,17 @@ td {
 .margin-all {
     margin: 10px;
 }
+#submitButton {
+  display: none ;
+}
+
+#nextButton {
+  display: inline;
+
+}
+.invisible{
+  display: block;
+  visibility: hidden;
+  height: 0;
+  width: 0;
+}
