--- a/eve-catalogue-gui/src/app/blueprints-components/blueprints-e-stepper/blueprints-e-stepper.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-components/blueprints-e-stepper/blueprints-e-stepper.component.html
@@ -1,4 +1,4 @@
-<mat-horizontal-stepper [linear]="isLinear" #stepper class="full-width-table">
+<mat-horizontal-stepper  #stepper class="full-width-table" (selectionChange)="onStepChanged($event)">
     <mat-step [stepControl]="zeroFormGroup">
         <form [formGroup]="zeroFormGroup" class="data-form" >
             <ng-template matStepLabel>General Information</ng-template>
@@ -15,10 +15,18 @@
             <mat-form-field appearance="outline" color=primary class="data-full-width">
                 <input matInput id="description" placeholder="Blueprint Description" formControlName="bpDescriptionCtrl">
             </mat-form-field>
+            <mat-form-field appearance="outline" class="data-full-width">
+              <mat-label>Deployment Type</mat-label>
+              <mat-select formControlName="deploymentTypeCtrl" name="deployType" (selectionChange)="onDeploymentTypeSelected($event);">
+                  <mat-option *ngFor="let deployType of deployTypes" [value]="deployType" #deployTypeSelected >
+                      {{deployType}}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
             <div class="margin-top"></div>
             <p> Blueprint Name: {{expBlueprintName}}</p>
             <div class="margin-top">
-                <button mat-raised-button matStepperNext color="primary" class="margin-all">Next</button>
+                <button mat-raised-button matStepperNext color="primary" class="margin-all"  [disabled]="zeroFormGroup.invalid" id="zeroFormGroupButton" >Next</button>
             </div>
         </form>
     </mat-step>
@@ -48,14 +56,16 @@
             <p> Selected VSB: {{selectedVsb}}</p>
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
-                <button mat-raised-button matStepperNext color="primary" class="margin-all">Next</button>
+                <button mat-raised-button matStepperNext color="primary" class="margin-all" [disabled]="firstFormGroup.invalid">Next</button>
             </div>
         </form>
     </mat-step>
     <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup" class="data-form">
+
             <ng-template matStepLabel>CB Selection</ng-template>
-            <mat-radio-group formControlName="selectCbsCtrl" *ngFor="let cb of filterCtxbsInSite(); let i=index" class="flex-column" (change)="onSelectedCb($event)">
+            <mat-checkbox (change)="disableCtxb($event);">No Context Blueprints</mat-checkbox>
+            <mat-radio-group formControlName="selectCbsCtrl" *ngFor="let cb of filterCtxbsInSite(); let i=index" class="flex-column" (change)="onSelectedCb($event)" id="ctxbChoise">
                 <mat-radio-button [value]="cb.value" class="margin-top">{{cb.viewValue}}</mat-radio-button>
             </mat-radio-group>
             <div class="margin-top"></div>
@@ -65,7 +75,8 @@
             <p> Selected CBs: {{selectedCbs.join(', ')}}</p>
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
-                <button mat-raised-button matStepperNext color="primary" class="margin-all">Next</button>
+                <button mat-raised-button id="onDemandType" matStepperNext color="primary" class="margin-all" [disabled]="secondFormGroup.invalid">Next</button>
+                <button mat-raised-button id="staticType" (click) = "goToStepIndex(5);" color="primary"  class="margin-all" >Next</button>
             </div>
         </form>
     </mat-step>
@@ -82,7 +93,7 @@
             <p> Uploaded NSD: {{uploadedNsdName}}</p>
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
-                <button mat-raised-button matStepperNext color="primary" class="margin-all">Next</button>
+                <button mat-raised-button matStepperNext color="primary" class="margin-all" [disabled]="thirdFormGroup.invalid">Next</button>
             </div>
         </form>
     </mat-step>
@@ -129,16 +140,18 @@
                     <h4>Parameters</h4>
                     <div formArrayName="items" *ngFor="let item of fourthFormGroup.get('items').controls; let i=index">
                         <div [formGroupName]="i">
-                            <h5>Param {{i + 1}}</h5>
+                          <label>{{this.translationParams[i]}}</label>
                             <td>
-                                <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                                <!-- <mat-form-field appearance="outline" color=primary class="rules-full-width">
                                     <mat-label>Parameter Id</mat-label>
                                     <mat-select formControlName="parameterId" (selectionChange)="onParameterGiven($event);">
                                         <mat-option *ngFor="let param of translationParams" [value]="param.parameterId">
                                             {{param.parameterId}}
                                         </mat-option>
                                     </mat-select>
-                                    <!--input matInput placeholder="Parameter Id" required formControlName="parameterId" (change)="onParameterGiven($event)"-->
+                                </mat-form-field> -->
+                                <mat-form-field appearance="outline" color=primary class="invisible rules-full-width" >
+                                  <input matInput placeholder="{{this.translationParams[i]}}" [ngModel]="this.translationParams[i]" formControlName="parameterId" >
                                 </mat-form-field>
                             </td>
                             <td>
@@ -154,19 +167,7 @@
                         </div>
                     </div>
                 </tr>
-                <tr>
-                    <td></td>
-                    <td>
-                        <div>
-                            <button mat-fab (click)="removeItem();" *ngIf="items?.length > 1" color="primary"><mat-icon>remove</mat-icon></button>
-                        </div>
-                    </td>
-                    <td>
-                        <div>
-                            <button mat-fab (click)="addItem();" color="primary"><mat-icon>add</mat-icon></button>
-                        </div>
-                    </td>
-                </tr>
+
             </table>
             <div class="margin-top"></div>
             <p> Blueprint Name: {{expBlueprintName}}</p>
@@ -177,7 +178,7 @@
             <p> Parameters: {{parameterNames.join(', ')}}</p>
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
-                <button mat-raised-button matStepperNext color="primary" class="margin-all">Next</button>
+                <button mat-raised-button matStepperNext color="primary" class="margin-all" [disabled]="fourthFormGroup.invalid">Next</button>
             </div>
         </form>
     </mat-step>
@@ -185,7 +186,7 @@
         <form [formGroup]="fifthFormGroup" class="data-form">
             <ng-template matStepLabel>Metrics & KPIs</ng-template>
             <table class="data-full-width" cellspacing="0">
-                <h4>Metrics</h4>
+                <h4>Infrastructure metrics</h4>
                 <div formArrayName="metric_items" *ngFor="let item of fifthFormGroup.get('metric_items').controls; let i=index">
                     <div [formGroupName]="i">
                         <h5>Metric {{i + 1}}</h5>
@@ -194,8 +195,8 @@
                                 <mat-form-field appearance="outline" color=primary class="data-full-width">
                                     <mat-label>Metric Type</mat-label>
                                     <mat-select formControlName="iMetricType" name="metricType">
-                                        <mat-option *ngFor="let type of metricTypes" [value]="type">
-                                            {{type}}
+                                        <mat-option *ngFor="let type of metricTypes" [value]="type.value">
+                                            {{type.viewValue}}
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
@@ -262,7 +263,7 @@
                     </td>
                 </tr>
                 <h4>KPIs</h4>
-                <div formArrayName="kpi_items" *ngFor="let item of fifthFormGroup.get('kpi_items').controls; let i=index">
+                <div formArrayName="kpi_items" *ngFor="let item of fifthFormGroup.get('kpi_items')?.controls; let i=index">
                     <div [formGroupName]="i">
                         <h5>KPI {{i + 1}}</h5>
                         <tr>
@@ -339,8 +340,9 @@
             <p> Metrics: {{metricNames.join(', ')}}</p>
             <p> KPIs: {{kpiNames.join(', ')}}</p>
             <div class="margin-top">
-                <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
-                <button mat-raised-button matStepperNext color="primary" class="margin-all">Next</button>
+                <button mat-raised-button id="staticTypeBack" (click) = "goToStepIndex(2);" color="primary" class="margin-all">Back</button>
+                <button mat-raised-button id="onDemandTypeBack" matStepperPrevious color="primary" class="margin-all">Back</button>
+                <button mat-raised-button matStepperNext color="primary" class="margin-all" >Next</button>
             </div>
         </form>
     </mat-step>
@@ -362,7 +364,7 @@
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
                 <button mat-raised-button (click)="stepper.reset()" color="warn" class="margin-all">Reset</button>
-                <button mat-raised-button color="accent" class="margin-all" (click)="createOnBoardExpBlueprintRequest(nsdFiles.files);">Submit</button>
+                <button mat-raised-button color="accent" class="margin-all"  [disabled]="sixthFormGroup.invalid" (click)="createOnBoardExpBlueprintRequest(nsdFiles.files);">Submit</button>
             </div>
         </form>
     </mat-step>
