--- a/eve-catalogue-gui/src/app/blueprints-components/blueprints-vs-stepper/blueprints-vs-stepper.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-components/blueprints-vs-stepper/blueprints-vs-stepper.component.html
@@ -10,11 +10,15 @@
     </mat-step>
     <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup">
+
             <ng-template matStepLabel>Upload NSDs</ng-template>
-            <input #nsdFiles type="file" formControlName="secondCtrl" (change)="onUploadedNsd($event,nsdFiles.files)" required/>
+            <mat-checkbox (change)="hideNextShowSubmit($event);">STATIC DEPLOYMENT</mat-checkbox>
+          <br />&nbsp;<br />
+            <input #nsdFiles type="file" id="uploadFile" formControlName="secondCtrl" (change)="onUploadedNsd($event,nsdFiles.files)" required/>
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
-                <button mat-raised-button matStepperNext color="primary" class="margin-all">Next</button>
+                <button mat-raised-button matStepperNext id="nextButton" color="primary" class="margin-all">Next</button>
+                <button mat-raised-button color="accent" id="submitButton" class="margin-all" (click)="createOnBoardingRequestWithoutNsds(blueprintFile.files);">Submit</button>
             </div>
         </form>
     </mat-step>
@@ -59,17 +63,17 @@
                 </tr>
                 <tr>
                     <h4>Parameters</h4>
-                    <div formArrayName="items" *ngFor="let item of thirdFormGroup.get('items').controls; let i=index">
+                    <div formArrayName="items" *ngFor="let item of thirdFormGroup.get('items')?.controls; let i=index;">
                         <div [formGroupName]="i">
-                            <h5>Param {{i + 1}}</h5>
+                            <label>{{this.translationParams[i]}}</label>
                             <td>
-                                <mat-form-field appearance="outline" color=primary class="rules-full-width">
-                                    <mat-label>Parameter Id</mat-label>
-                                    <mat-select formControlName="parameterId">
-                                        <mat-option *ngFor="let param of translationParams" [value]="param.parameterId">
-                                            {{param.parameterId}}
-                                        </mat-option>
-                                    </mat-select>
+                              <!-- <mat-select formControlName="parameterId" style="display:none;">
+                                <mat-option value="{{this.translationParams[i]}}" selected >
+                                  {{this.translationParams[i]}}
+                                </mat-option>
+                            </mat-select> -->
+                              <mat-form-field appearance="outline" color=primary class="invisible rules-full-width" >
+                                  <input matInput placeholder="{{this.translationParams[i]}}" [ngModel]="this.translationParams[i]" formControlName="parameterId" >
                                 </mat-form-field>
                             </td>
                             <td>
@@ -84,19 +88,6 @@
                             </td>
                         </div>
                     </div>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>
-                        <div>
-                            <button mat-fab (click)="removeItem();" *ngIf="items?.length > 1" color="primary"><mat-icon>remove</mat-icon></button>
-                        </div>
-                    </td>
-                    <td>
-                        <div>
-                            <button mat-fab (click)="addItem();" color="primary"><mat-icon>add</mat-icon></button>
-                        </div>
-                    </td>
                 </tr>
             </table>
             <div class="margin-top">
