--- a/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.html
+++ b/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.html
@@ -1,7 +1,12 @@
 <!-- Title Header-->
 <!--<app-content-header title="Tickets"></app-content-header>-->
 
-<app-catalogue-sub-toolbar></app-catalogue-sub-toolbar>
+<mat-toolbar style="background-color: transparent;">
+    <span><button mat-button [matMenuTriggerFor]="user_menu"><mat-icon>person</mat-icon> {{username}} <mat-icon>keyboard_arrow_down</mat-icon></button></span>
+    <mat-menu #user_menu="matMenu">
+        <button mat-menu-item (click)="logout();">Logout</button>
+    </mat-menu>
+</mat-toolbar>
 
 <div class="contentBlock" style="background: transparent; padding: 30px; padding-bottom: 10%;">
     <!-- Action buttons -->
@@ -55,7 +60,10 @@
             <td mat-cell *matCellDef="let element">
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
                 <mat-button-toggle value="bold">
-                    <mat-icon aria-hidden="false" aria-label="Example edit icon">remove_red_eye</mat-icon>
+                    <mat-icon aria-hidden="false" aria-label="Example edit icon">edit</mat-icon>
+                </mat-button-toggle>
+                <mat-button-toggle value="italic">
+                    <mat-icon aria-hidden="false" aria-label="Example folder icon">folder</mat-icon>
                 </mat-button-toggle>
             </mat-button-toggle-group>
             </td>
@@ -72,11 +80,8 @@
         *ngIf="getTicketingStatus() == 'list'&&!fetching">
     </mat-paginator>
 
-    <mat-spinner *ngIf="fetching" class="my-spinner"></mat-spinner>
-
-
     <!-- New ticket form -->
-    <mat-card class="my-card" *ngIf="getTicketingStatus() == 'add'&&!fetching">
+    <mat-card class="my-card" *ngIf="getTicketingStatus() == 'add'">
 
         <mat-card-title>
             <div class="addTicket-card-header">
@@ -85,7 +90,7 @@
         </mat-card-title>
         <mat-divider></mat-divider>
         <mat-card-content>
-            <form class="my-form" [formGroup]="addTicketForm">
+            <form class="my-form" [formGroup]="addTicketForm" (ngSubmit)="onSubmit()">
 
                 <mat-form-field class="full-width">
                     <mat-select placeholder="Select a Product" name="product" [(value)]="product" formControlName="product" required (selectionChange)="getComponents(product)">
@@ -107,6 +112,12 @@
                 <mat-form-field class="full-width">
                     <mat-label>Description</mat-label>
                     <textarea matInput formControlName="description" placeholder="Ticket details" name="description" required></textarea>
+                </mat-form-field>
+
+                <mat-form-field class="full-width">
+                    <mat-select formControlName="assignedTo" placeholder="Select and admin user to assign the ticket" name="assignedTo" [(value)]="assignedTo" required>
+                    <mat-option *ngFor="let user of users" [value]="user" >{{ user }}</mat-option>
+                    </mat-select>
                 </mat-form-field>
                 <div class="newTicketButtonContainer">
                     <button mat-raised-button (click)="onSubmit()" color="primary" class="newTicketButton">Create</button>
