--- a/eve-catalogue-gui/src/app/experiments/experiments.component.html
+++ b/eve-catalogue-gui/src/app/experiments/experiments.component.html
@@ -67,7 +67,7 @@
               <mat-button-toggle value="manage" *ngIf="getRole().indexOf('SITE_MANAGER') >= 0 && ((row.status).indexOf('SCHEDULING') >= 0 || (row.status).indexOf('ACCEPTED') >= 0);" (click)="openMgmtDialog(row.experimentId, row.status);"><mat-icon>build</mat-icon></mat-button-toggle>
               <mat-button-toggle value="view_descriptor" (click)="viewExperiment(row.experimentId)"><mat-icon>remove_red_eye</mat-icon></mat-button-toggle>
               <mat-button-toggle value="view_metrics" *ngIf="((row.status).indexOf('TERMINATED') >= 0 || (row.status).indexOf('FAILED') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0 || (row.status).indexOf('RUNNING_EXECUTION') >= 0);" (click)="viewMetrics(row.experimentId)"><mat-icon>multiline_chart</mat-icon></mat-button-toggle>
-              <mat-button-toggle value="delete" *ngIf="((row.status).indexOf('READY') >= 0 || (row.status).indexOf('TERMINATED') >= 0 || (row.status).indexOf('FAILED') >= 0 || (row.status).indexOf('REFUSED') >= 0)  && getRole().indexOf('EXPERIMENTER') >= 0;" (click)="deleteExperiment(row.experimentId)"><mat-icon>delete_forever</mat-icon></mat-button-toggle>
+              <mat-button-toggle value="delete" *ngIf="((row.status).indexOf('READY') >= 0 || (row.status).indexOf('TERMINATED') >= 0 || (row.status).indexOf('FAILED') >= 0 || (row.status).indexOf('REFUSED') >= 0)  || ( getRole().indexOf('EXPERIMENTER') >= 0);" (click)="deleteExperiment(row.experimentId)"><mat-icon>delete_forever</mat-icon></mat-button-toggle>
             </mat-button-toggle-group>
         </td>
     </ng-container>
