--- a/eve-catalogue-gui/src/app/files-service/files-service.component.html
+++ b/eve-catalogue-gui/src/app/files-service/files-service.component.html
@@ -1,6 +1,6 @@
-<app-catalogue-sub-toolbar></app-catalogue-sub-toolbar>
+<!-- <app-catalogue-sub-toolbar></app-catalogue-sub-toolbar> -->
 
-<div class="contentBlock">
+<div class="contentBlock" style="background: transparent; padding: 30px; padding-bottom: 10%;">
     <!-- Action buttons -->
     <section class="mat-typography title-group">
         <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
@@ -44,17 +44,17 @@
             <th mat-header-cell *matHeaderCellDef> Status </th>
             <td mat-cell *matCellDef="let element"> {{element.status}} </td>
         </ng-container>
-        
+
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let element"> 
+            <td mat-cell *matCellDef="let element">
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
                 <mat-button-toggle value="bold" *ngIf="isSiteManager()" (click)='fileStatusDialog(element.filename, element.assotiatedSite, "edit")'>
                     <mat-icon aria-hidden="false" aria-label="Example edit icon">edit</mat-icon>
                 </mat-button-toggle>
                 <mat-button-toggle value="bold" (click)='downloadDialog(element.filename)'>
                     <mat-icon aria-hidden="false" aria-label="Example edit icon">cloud_download</mat-icon>
-                </mat-button-toggle>                
+                </mat-button-toggle>
                 <mat-button-toggle value="italic" (click)='deleteDialog(element.filename, element.assotiatedSite)'>
                     <mat-icon aria-hidden="false" aria-label="Delete">delete_forever</mat-icon>
                 </mat-button-toggle>
@@ -65,8 +65,8 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="element-row" (click)=fileDetails(element)></tr>
 
-    </table>  
-    
+    </table>
+
     <!-- Upload VNF form -->
     <mat-card class="my-card" *ngIf="getStatus() == 'add'&&!fetching">
         <form class="my-form" [formGroup]="uploadForm" >
@@ -76,27 +76,27 @@
             </mat-form-field>
 
             <div style="text-align:center;">
-                <mat-card class="upload-card" style="margin-top:10px;">  
-                    <mat-card-content>  
-                        <ul>  
-                            <li *ngFor="let file of files">  
-                                <mat-progress-bar [value]="file.progress"></mat-progress-bar>  
-                                <span id="file-label">  
+                <mat-card class="upload-card" style="margin-top:10px;">
+                    <mat-card-content>
+                        <ul>
+                            <li *ngFor="let file of files">
+                                <mat-progress-bar [value]="file.progress"></mat-progress-bar>
+                                <span id="file-label">
                                     {{file.filename}}
-                                    <mat-icon class="rm-upload-item" aria-hidden="false" (click)='deleteFromUploadList(file.filename)' aria-label="Delete">delete_forever</mat-icon> 
-                                </span> 
-                            </li>  
-                        </ul>  
-                    </mat-card-content>  
-                    <mat-card-actions>  
-                        <button mat-button color="warn" (click)="onClick()">  
-                            <mat-icon>attach_file</mat-icon>  
-                            Select File  
-                        </button>  
-                    </mat-card-actions>  
+                                    <mat-icon class="rm-upload-item" aria-hidden="false" (click)='deleteFromUploadList(file.filename)' aria-label="Delete">delete_forever</mat-icon>
+                                </span>
+                            </li>
+                        </ul>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-button color="warn" (click)="onClick()">
+                            <mat-icon>attach_file</mat-icon>
+                            Select File
+                        </button>
+                    </mat-card-actions>
                 </mat-card>
                 <input type="file" #fileUpload id="fileUpload" name="fileUpload" multiple="multiple" accept=".zip" style="display:none;" />
-            </div> 
+            </div>
 
             <div *ngFor="let data of siteFacilities; let i=index">
                 <label>
@@ -108,7 +108,7 @@
             <div class="uploadButtonContainer">
                 <button mat-raised-button (click)="onSubmit()" color="primary" class="uploadButton">Upload File</button>
             </div>
-        </form>       
-    </mat-card>   
+        </form>
+    </mat-card>
 
 </div>
