--- a/eve-catalogue-gui/src/app/descriptors-e/descriptors-e.component.html
+++ b/eve-catalogue-gui/src/app/descriptors-e/descriptors-e.component.html
@@ -4,7 +4,7 @@
 </mat-toolbar>
 <mat-tab-group [selectedIndex]="2">
   <mat-tab label="View">
-    <div style="background: transparent; padding: 30px;">
+    <div style="background: transparent; padding: 30px; padding-bottom: 10%;">
       <table mat-table class="full-width-table" matSort aria-label="Elements">
         <!-- Id Column -->
         <ng-container matColumnDef="id">
