--- a/eve-catalogue-gui/src/app/descriptors-e/descriptors-e.component.html
+++ b/eve-catalogue-gui/src/app/descriptors-e/descriptors-e.component.html
@@ -39,7 +39,7 @@
         <!-- Configurable Parameters Column -->
         <ng-container matColumnDef="kpi">
           <th mat-header-cell *matHeaderCellDef>KPI Thresholds</th>
-          <td mat-cell *matCellDef="let row"><tr *ngFor="let param of row.kpiThresholds | keyvalue"><td> - {{param.key}}: {{param.value}}</td></tr></td>
+          <td mat-cell *matCellDef="let row"><tr *ngFor="let param of row.kpiThresholds | keyvalue"><td>{{param.key}}:<br /> - Lower bound limit: {{param.value.lowerBound}}<br /> - UpperBoundLimit: {{param.value.upperBound}}</td></tr></td>
         </ng-container>
 
         <!-- Button Column -->
