--- a/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
+++ b/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
@@ -49,10 +49,16 @@
         <h3>Executions</h3>
 
         <!-- Id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Execution </th>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
           <td mat-cell *matCellDef="let element"> {{element.executionName}} </td>
         </ng-container>
+
+                <!-- Id Column -->
+                <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef> Id </th>
+                  <td mat-cell *matCellDef="let element">  {{element.executionId}} </td>
+                </ng-container>
 
         <!-- State Column -->
         <ng-container matColumnDef="state">
