Blueprints creation fixes

--- a/eve-catalogue-gui/src/app/blueprints-components/blueprints-tc/blueprints-tc.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-components/blueprints-tc/blueprints-tc.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar style="background: transparent;">
     <span style="margin-left: 15px;"><h1 class="mat-h1">Test Case Blueprints</h1></span>
 </mat-toolbar>
-<mat-tab-group [selectedIndex]="2">
+<mat-tab-group [(selectedIndex)]="selectedIndex">
     <mat-tab label="View">
 
         <div style="background: transparent; padding: 30px; padding-bottom: 10%;">
