--- a/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
+++ b/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
@@ -50,7 +50,7 @@
 
         <!-- Id Column -->
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <th mat-header-cell *matHeaderCellDef> Execution </th>
           <td mat-cell *matCellDef="let element"> {{element.executionName}} </td>
         </ng-container>
 
