--- a/eve-catalogue-gui/src/app/experiment-metric-dashboard/experiment-metric-dashboard.component.html
+++ b/eve-catalogue-gui/src/app/experiment-metric-dashboard/experiment-metric-dashboard.component.html
@@ -1,6 +1,6 @@
 <app-catalogue-sub-toolbar></app-catalogue-sub-toolbar>
 
-<div style="background: transparent; padding: 30px; ">
+<div style="background: transparent; padding: 30px;  padding-bottom: 10%;">
   <mat-toolbar style="background: transparent;">
     <span style="margin-left: 15px;"><h1 class="mat-h1">Experiment Metrics Dashboards</h1></span>
 </mat-toolbar>
