Fix on experiment creation snackbar error

--- a/eve-catalogue-gui/src/app/nfv-components/nfv-vnf/nfv-vnf.component.html
+++ b/eve-catalogue-gui/src/app/nfv-components/nfv-vnf/nfv-vnf.component.html
@@ -67,8 +67,8 @@
       style="background: transparent;">
   </mat-paginator>
 </div>
-  </mat-tab>
+  <!-- </mat-tab>
   <mat-tab label="Onboard">
 
     <app-files-service></app-files-service>
-  </mat-tab>
+  </mat-tab> -->
